# tareas

./: .gitignore  nose  pyproject.toml
src/: main.py
src/controllers/: TareaController.py  TareasController.py  UserController.py  UsuarioController.py
src/database/: tareas.sql
src/models/: Tareas.py  TareasModel.py  UserModel.py  database.py  databaseModel.py  schemas.py  schemasModel.py
src/views/: LoginView.py  UserView.py  dashboard.py  dashboardView.py  registroView.py
